--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,98 @@ html {
   height:100%;
 }
 
+body {
+  height: 100%;
+  background-color: #C76AF1
+}
+
+button {
+  height: 207px;
+  width: 281px;
+  cursor: pointer;
+  background-color: #AB49DA
+}
+
+.all-sections {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  height: 100%;
+}
+
+.central-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 216px;
+}
+
+.player-section,
+.computer-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.left-side,
+.right-side {
+  background-color: #CD82F0
+}
+
+
+
+
+
+/*
+button {
+  height: 207px;
+  width: 281px;
+  cursor: pointer;
+}
+
+img {
+  max-height: 100%;
+  max-width: 100%;
+}
+.main-section {
+  display: flex;
+}
 .middle-section {
   align-items: center;
   flex-direction: column;
   display: flex;
+  margin: -142px;
 }
 
-.players-section {
+.mid-section {
+  padding: 20px;
+}
+
+.player-section {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
+.computer-section {
+  display: flex;
+}
+
 .computer-player,
 .human-player {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  overflow-y: auto;
+  width: 25%;
 }
+
+.classic-mode,
+.difficult-mode {
+  background-color: #AB49DA
+}
+
+.hidden {
+  display: none;
+} */
