--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,32 @@
-* {
-  border: solid blue 2px;
-}
+/* * {
+  border: solid blue .5px;
+} */
 
 html {
   height:100%;
+  overflow: hidden;
 }
 
 body {
   height: 100%;
-  background-color: #C76AF1
+  background-color: #C76AF1;
+  margin: -8px;
 }
 
 button {
   height: 207px;
   width: 281px;
+  cursor: pointer;
+  background-color: #AB49DA
+}
+
+button:hover {
+  background-color: white;
+}
+
+.change-game-button {
+  height: 60px;
+  width: 180px;
   cursor: pointer;
   background-color: #AB49DA
 }
@@ -33,6 +46,14 @@ button {
   padding: 216px;
 }
 
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 70px;
+}
+
 .player-section,
 .computer-section {
   display: flex;
@@ -42,10 +63,19 @@ button {
 
 .left-side,
 .right-side {
-  background-color: #CD82F0
+  background-color: #CD82F0;
+  width: 250px;
 }
 
+.choices {
+max-width: 100%;
+max-height: 100%;
+display: block;
+}
 
+.hidden {
+  display: none;
+}
 
 
 
