--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,15 @@ html {
   overflow: hidden;
 }
 
+h1 {
+  font-size: 39px
+}
+
+h1,
+h2 {
+  color: white;
+}
+
 body {
   height: 100%;
   background-color: #C76AF1;
@@ -17,7 +26,10 @@ button {
   height: 207px;
   width: 281px;
   cursor: pointer;
-  background-color: #AB49DA
+  background-color: #AB49DA;
+  font-family: 'Passion One', cursive;
+  font-size: 15px;
+  font-weight: bold;
 }
 
 button:hover {
@@ -28,7 +40,8 @@ button:hover {
   height: 60px;
   width: 180px;
   cursor: pointer;
-  background-color: #AB49DA
+  background-color: #AB49DA;
+  font-size: 22px;
 }
 
 .all-sections {
@@ -44,6 +57,7 @@ button:hover {
   flex-direction: column;
   justify-content: center;
   padding: 216px;
+  width: 407px;
 }
 
 .center {
@@ -59,12 +73,35 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: 'Kalam', cursive;
+  font-size: 20px;
+  font-weight: bolder;
+  height: 800px
 }
+
+.title {
+  font-family: 'Kalam', cursive;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+/* .classic-section,
+.difficult-section {
+  font-family: 'Passion One', cursive;
+} */
 
 .left-side,
 .right-side {
   background-color: #CD82F0;
   width: 250px;
+}
+
+.left-side {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .choices {
