Fix singular icon showing during Tie-Game

--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,11 @@ display: block;
   width: 281px;
 }
 
+.rendered-choices-area {
+  display: flex;
+  flex-direction: row;
+}
+
 .hidden {
   display: none;
 }
