--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ h1 {
 h1,
 h2 {
   color: white;
-  /* border: dashed blue 2px; */
 }
 
 h2 {
@@ -42,13 +41,16 @@ button {
 button:hover {
   background-color: white;
   color: #AB49DA;
-
 }
 
 img {
   height: 210px;
   width: 210px;
   cursor: pointer;
+}
+
+.hoverable:hover {
+  transform: scale(0.9);
 }
 
 .change-game-button {
@@ -68,19 +70,11 @@ img {
 }
 
 .central-section {
-  /* border: solid teal 1px; */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   width: 407px;
-}
-
-.center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .player-section,
@@ -89,6 +83,7 @@ img {
   flex-direction: column;
   align-items: center;
   font-family: 'Kalam', cursive;
+  color: white;
   font-size: 35px;
   font-weight: bolder;
   height: 800px
@@ -101,11 +96,6 @@ img {
   flex-direction: column;
   width: 724px;
 }
-
-/* .classic-section,
-.difficult-section {
-  font-family: 'Passion One', cursive;
-} */
 
 .left-side,
 .right-side {
@@ -123,27 +113,13 @@ img {
   justify-content: space-between;
 }
 
-.choices {
-max-width: 100%;
-max-height: 100%;
-display: block;
-}
-
-.player-choices,
-.difficult-choices {
+.player-choices {
   display: flex;
-  /* border: solid red 0.5px; */
   height: 210px;
-  width: 280px;
+  width: 660px;
   justify-content: center;
-}
-
-.difficult-choices {
-  display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  height: 460px;
-  width: 630px;
+  align-content: center;
 }
 
 .difficult-mode {
@@ -159,58 +135,3 @@ display: block;
 .hidden {
   display: none;
 }
-
-
-
-/*
-button {
-  height: 207px;
-  width: 281px;
-  cursor: pointer;
-}
-
-img {
-  max-height: 100%;
-  max-width: 100%;
-}
-.main-section {
-  display: flex;
-}
-.middle-section {
-  align-items: center;
-  flex-direction: column;
-  display: flex;
-  margin: -142px;
-}
-
-.mid-section {
-  padding: 20px;
-}
-
-.player-section {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.computer-section {
-  display: flex;
-}
-
-.computer-player,
-.human-player {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  overflow-y: auto;
-  width: 25%;
-}
-
-.classic-mode,
-.difficult-mode {
-  background-color: #AB49DA
-}
-
-.hidden {
-  display: none;
-} */
