--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ img {
   align-items: stretch;
   display: flex;
   flex-direction: row;
-  height: 772px;
+  height: 100%;
   justify-content: space-between;
 }
 
@@ -107,7 +107,7 @@ img {
   font-family: 'Kalam', cursive;
   font-size: 35px;
   font-weight: bolder;
-  height: 800px
+  height: 100%;
 }
 
 .title {
@@ -124,7 +124,7 @@ img {
   background-color: #CD82F0;
   display: flex;
   flex-direction: column;
-  height: 753px;
+  height: 100%;
   justify-content: space-between;
   margin: 0;
   padding: 9px;
@@ -147,6 +147,18 @@ img {
 .rendered-choices-area {
   display: flex;
   flex-direction: row;
+}
+
+.disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.disabled:hover {
+  background-color: #AB49DA;
+  box-shadow: none;
+  color: #f0f2f5;
+
 }
 
 .hidden {
