--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@ h2 {
 body {
   background-color: #C76AF1;
   height: 100%;
-  margin: -8px;
 }
 
 button {
@@ -55,6 +54,7 @@ img {
   cursor: pointer;
   font-size: 22px;
   height: 60px;
+  margin: 5px;
   width: 180px;
 }
 
@@ -75,8 +75,8 @@ img {
   color: white;
   font-family: 'Kalam', cursive;
   font-size: 32px;
-  text-align: center;
   padding-bottom: 25px;
+  text-align: center;
 }
 
 .all-sections {
@@ -155,9 +155,14 @@ img {
   padding: 20px;
 }
 
+.human-icon,
+.computer-icon {
+  font-size: 65px;
+}
+
 .disabled {
-  opacity: 0.6;
   cursor: not-allowed;
+  opacity: 0.6;
 }
 
 .disabled:hover {
