--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ img {
   cursor: pointer;
   font-size: 22px;
   height: 60px;
-  margin: 5px;
+  margin: 20px;
   width: 180px;
 }
 
@@ -141,6 +141,7 @@ img {
   flex-wrap: wrap;
   height: 210px;
   justify-content: center;
+  margin-bottom: 20px;
   width: 660px;
 }
 
